--- a/blogpost.html
+++ b/blogpost.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Este es el titulo del post</title>
+        <title>Bienvenido al Hyperblog 2.0</title>
         <link rel="stylesheet" href="css/estilos.css"/>
     </head>
     <body>
